--- a/vr_automation/requirements.txt
+++ b/vr_automation/requirements.txt
@@ -11,7 +11,9 @@ python-dotenv==1.0.0
 
 # Frameworks de IA (implementação modular)
 langchain==0.3.27
+langchain-openai==0.0.2
 crewai==0.165.1
+openai==1.3.0
 
 # Dependências de desenvolvimento
 pytest==7.4.0
